<resources>
    <string name="app_name">Project2 - Places</string>
    <string name="action_settings">Settings</string>
    <string name="about_settings">About</string>
    <string name="search_settings">Search</string>
    <string name="showPlacesLabel">Show places</string>
    <string name="preferencesLabel">Preferences</string>
    <string name="aboutLabel">About</string>
    <string name="exitLabel">Exit</string>
    <string name="inputNameLabel">Name:</string>
    <string name="inputNameHint">Place name</string>
    <string name="inputTypeLabel">Type:</string>
    <string name="inputAddressLabel">Address:</string>
    <string name="inputAddressHint">Place address</string>
    <string name="inputPhoneLabel">Phone:</string>
    <string name="inputPhoneHint">1234567890</string>
    <string name="inputUrlLabel">URL:</string>
    <string name="inputUrlHint">www.place.com</string>
    <string name="inputCommentLabel">Comment:</string>
    <string name="inputCommentHint">Comment about this place</string>
    <string name="aboutContents">
        This application has been developed as an example for the Android course to
        show how new activities can be launched from the main one.
    </string>
</resources>
