<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/inputNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputNameLabel"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputNameHint"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/inputTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputTypeLabel"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/inputType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/inputAddressLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputAddressLabel"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputAddressHint"
        android:inputType="textPostalAddress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/inputPhoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputPhoneLabel"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputPhoneHint"
            android:inputType="phone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/inputUrlLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputUrlLabel"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputUrlHint"
        android:inputType="textUri"/>

    <TextView
        android:id="@+id/inputCommentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputCommentLabel"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputCommentHint"
        android:inputType="textMultiLine"/>

</LinearLayout>